<resources>
    <string name="app_name">Lotso</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_image_desc">Image of a product.</string>
    <string name="product_title">COUTURE PALETTE</string>

    <string name="header_product_name">Product Name:</string>
    <string name="header_product_desc">Product Description:</string>
    <string name="header_product_condition">Product Condition:</string>

    <string name="product_history">Purchase History:</string>
    <string name="blank_title">To Start, Tap Product</string>
</resources>
