<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="amhamogus.com.latsoclient.fragments.ProductDetailFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/damn_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop" />


            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_below="@+id/damn_image"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="10dp"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:orientation="vertical"
                    android:paddingBottom="20dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp">


                    <TextView
                        android:id="@+id/textView11"
                        style="@style/productHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="32dp"
                        android:text="@string/header_product_name"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/imageView4" />

                    <TextView
                        android:id="@+id/product_title"
                        style="@style/productInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/textView11"
                        android:layout_below="@+id/textView11"
                        android:layout_gravity="bottom"
                        android:text="@string/hello_world" />

                    <TextView
                        android:id="@+id/textView12"
                        style="@style/productHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/header_product_desc"
                        android:layout_below="@+id/product_title"
                        android:layout_alignStart="@+id/product_title" />


                    <TextView
                        android:id="@+id/product_description"
                        style="@style/productInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:lineSpacingExtra="1dp"
                        android:paddingRight="10dp"
                        android:paddingTop="7dp"
                        android:text="@string/hello_world"
                        android:layout_alignStart="@+id/textView12"
                        android:layout_below="@+id/imageView5" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/tag_new"
                        android:layout_alignTop="@+id/textView11"
                        android:layout_alignParentStart="true" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/bag_new"
                        android:layout_below="@+id/product_title"
                        android:layout_alignParentStart="true" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <!--<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
            <!--android:id="@+id/card_view_history"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/card_view"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginTop="10dp"-->
            <!--card_view:cardCornerRadius="4dp">-->

            <!--<TextView-->
            <!--style="@style/productHeader"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingLeft="20dp"-->

            <!--android:paddingTop="15dp"-->
            <!--android:text="@string/product_history" />-->

            <!--<LinearLayout-->
            <!--android:id="@+id/card_list"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_alignParentStart="true"-->

            <!--android:orientation="vertical"-->
            <!--android:paddingBottom="10dp"-->
            <!--android:paddingLeft="20dp"-->
            <!--android:paddingTop="38dp">-->

            <!--</LinearLayout>-->

            <!--</android.support.v7.widget.CardView>-->
            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_view"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingBottom="10dp"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="19dp"
                        android:src="@drawable/warranty"
                        android:layout_centerVertical="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:id="@+id/textView10"
                        style="@style/productHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:text="@string/header_product_condition"
                        android:layout_alignTop="@+id/imageView2"
                        android:layout_toEndOf="@+id/imageView2" />

                    <TextView
                        android:id="@+id/product_condition"
                        style="@style/productInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hello_blank_fragment"
                        android:layout_below="@+id/imageView2"
                        android:layout_alignStart="@+id/textView10" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>
</FrameLayout>
